--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header {
     background-size: 50%;
     background-position: top 100px right 0;
     position: relative;
+    z-index: 100;
 }
 
 .top-text {
@@ -40,6 +41,7 @@ header {
     border-bottom: solid 200px #0c0c86;
     box-sizing: border-box;
     width: 75%;
+    z-index: -1;
 }
 
 .top-text p {
